src/objects/CodeofConductReferral__c.object
<CustomObject>
    <description>This object contains all student concerns escalated to the Student Conduct Board for review</description>
    <fields>
        <fullName>AdditionalSanctions__c</fullName>
        <label>Additional Sanctions</label>
        <picklist>
            <picklistValues>
                <fullName>Loss of Privileges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restitution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc Sanction: Essay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc Sanction: EWB Orientation Module 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc Sanction: Mandatory CWE Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disc Sanction: Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revocation of Grades/Assessment Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate Assessment/Tasks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withholding Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CoCResolvedDate__c</fullName>
        <description>Date the code of conduct referral moved to a resolved status.</description>
        <label>CoC Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CodeofConductPrimarySanction__c</fullName>
        <label>Code of Conduct Primary Sanction</label>
        <picklist>
            <picklistValues>
                <fullName>CoC Level 1 Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoC Level 2 Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disciplinary Expulsion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disciplinary Expulsion from Academic Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disciplinary Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disciplinary Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissal of Charges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informal Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revocation of Admission and/or Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateDeliveryNotification__c</fullName>
        <label>Date Delivery Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HearingDate__c</fullName>
        <label>Hearing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InvestigationTime__c</fullName>
        <description>Formula field that subtracts the student concern resolved date from the investigation start date to determine first response time, excluding weekends in the calculation.</description>
        <formula>CASE(MOD(DATEVALUE(StudentConcernResolvedDate__c)- DATE(1985,6,24),7), 
0 , CASE( MOD( DATEVALUE(ReferralCreatedDate__c) - DATEVALUE(StudentConcernResolvedDate__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(ReferralCreatedDate__c) - DATEVALUE(StudentConcernResolvedDate__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(ReferralCreatedDate__c) - DATEVALUE(StudentConcernResolvedDate__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(ReferralCreatedDate__c) - DATEVALUE(StudentConcernResolvedDate__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(ReferralCreatedDate__c) - DATEVALUE(StudentConcernResolvedDate__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(ReferralCreatedDate__c) - DATEVALUE(StudentConcernResolvedDate__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(ReferralCreatedDate__c) - DATEVALUE(StudentConcernResolvedDate__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(ReferralCreatedDate__c) - DATEVALUE(StudentConcernResolvedDate__c) )/7)*5)</formula>
        <label>Investigation Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IssueDetails__c</fullName>
        <label>Issue Details</label>
        <picklist>
            <picklistValues>
                <fullName>Abuse of Student Conduct System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Integrity: Collusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Integrity: Plagiarism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Integrity: Proctored Exam Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Integrity: Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispositional Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disruption or Obstruction of WGU Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misrepresentation:Forgery or alteration of WGU documents, records, and others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misrepresentation:Furnishing false information to WGU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misrepresentation: Identity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misuse of WGU Systems or Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theft of or Damage to WGU or other property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unprofessional Conduct: Harassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unprofessional Conduct: Physical Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unprofessional Conduct: Threats</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IssueSubType__c</fullName>
        <formula>TEXT(StudentConcern__r.IssueSubType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue Sub-Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorEmail__c</fullName>
        <formula>StudentConcern__r.MentorEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorName__c</fullName>
        <formula>StudentConcern__r.MentorName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralCreatedDate__c</fullName>
        <label>Referral Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReferralResolutionTime__c</fullName>
        <formula>CASE(MOD(DATEVALUE(ReferralCreatedDate__c)- DATE(1985,6,24),7), 
0 , CASE( MOD( DATEVALUE(CoCResolvedDate__c) - DATEVALUE(ReferralCreatedDate__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( DATEVALUE(CoCResolvedDate__c) - DATEVALUE(ReferralCreatedDate__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( DATEVALUE(CoCResolvedDate__c) - DATEVALUE(ReferralCreatedDate__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( DATEVALUE(CoCResolvedDate__c) - DATEVALUE(ReferralCreatedDate__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( DATEVALUE(CoCResolvedDate__c) - DATEVALUE(ReferralCreatedDate__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( DATEVALUE(CoCResolvedDate__c) - DATEVALUE(ReferralCreatedDate__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( DATEVALUE(CoCResolvedDate__c) - DATEVALUE(ReferralCreatedDate__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( DATEVALUE(CoCResolvedDate__c) - DATEVALUE(ReferralCreatedDate__c) )/7)*5)</formula>
        <label>Referral Resolution Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResolutionPath__c</fullName>
        <label>Resolution Path</label>
        <picklist>
            <picklistValues>
                <fullName>Informal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appealed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentCollege__c</fullName>
        <formula>StudentConcern__r.StudentCollege__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student College</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentConcernResolvedDate__c</fullName>
        <description>Formula field that brings over the student concern resolved date from the associated Student Concern record.</description>
        <formula>StudentConcern__r.ResolvedDate__c</formula>
        <label>Student Concern Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StudentConcern__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Concern</label>
        <referenceTo>StudentDisposition__c</referenceTo>
        <relationshipLabel>Code of Conduct Referrals</relationshipLabel>
        <relationshipName>CodeofConductReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentEmail__c</fullName>
        <formula>StudentConcern__r.Student__r.My_WGU_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <formula>StudentConcern__r.StudentID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMailingCity__c</fullName>
        <formula>StudentConcern__r.Student__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMailingStreet__c</fullName>
        <formula>StudentConcern__r.Student__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMailingZip__c</fullName>
        <formula>StudentConcern__r.Student__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <formula>StudentConcern__r.Student__r.FirstName &amp; &apos; &apos; &amp; StudentConcern__r.Student__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentProgram__c</fullName>
        <formula>StudentConcern__r.StudentProgram__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentState__c</fullName>
        <formula>StudentConcern__r.Student__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Contact object.</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Code of Conduct Referrals</relationshipLabel>
        <relationshipName>CodeOfConductReferrals_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TypeofIssue__c</fullName>
        <formula>TEXT(StudentConcern__r.TypeOfIssue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Issue</label>
        <type>Text</type>
    </fields>
    <label>Code of Conduct Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CoCResolvedDate__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code of Conduct Referrals</pluralLabel>
    <recordTypes>
        <fullName>Referral</fullName>
        <active>true</active>
        <description>Record type used to manage code of conduct referrals.</description>
        <label>Referral</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>